salesforce/src/objects/RMA_Item__c.object
<CustomObject>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RMA__c</fullName>
        <label>RMA</label>
        <referenceTo>RMA__c</referenceTo>
        <relationshipLabel>RMA Items</relationshipLabel>
        <relationshipName>RMA_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Item__c</fullName>
        <label>Sales Order Item</label>
        <referenceTo>Sales_Order_Item__c</referenceTo>
        <relationshipLabel>RMA Items</relationshipLabel>
        <relationshipName>RMA_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>RMA Item</label>
    <nameField>
        <displayFormat>RMAI-{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RMA Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>